
[package]
name = "simple-swap"
version = "0.1.0"
description = "For simple OTC swaps on-chain and interaction w/ Paradigm"
edition = "2021"

[net]
git-fetch-with-cli = true

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_swap"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["mainnet"]
mainnet = []
test-bpf = []


[dependencies]
anchor-lang = { version="0.24.2", features=["init-if-needed"] }
anchor-spl = { version="0.24.2", features=["dex"] }
solana-program = "1.9.28"
fixed = { version = "^1.9.0", features = ["serde"] }
fixed-macro = "^1.1.1"
bytemuck = "1.9.1"
bincode = "1.3.3"
serde = "1.0.137"
hex = "0.4.3"